fix sort dropdown menu on small screens

--- a/frontend/src/scss/pages/Home/_category.scss
+++ b/frontend/src/scss/pages/Home/_category.scss
@@ -11,7 +11,9 @@
   width: 100vw;
   .category-sort-select {
     margin-left: auto;
-    &,* {
+    width: 122px;
+    border-radius: 10px;
+    * {
       border-radius: 10px;
       width: max-content;
       font-size: 0.8rem;
